2022-12-02
-	Fix #381. pcap overwrite fixed.
-	Fix #380. string validation
-	Fix #377. Rework sampling code in general. Switch to packet interval/space notation.  Map older sampling to new notation.

Fix #375 relative timestamps with sysUptime id 160

2022-10-23
-	Rework nbar code. Use new array records and fix nbar bug in older versions.

2022-10-22
-	Fix #370. Help shows correct option -A
-	Fix #369. Legacy -M for NfSen works again

2022-10-07
-	Improve nbar handling. Add private enterprise number decoding

2022-10-03
-	Merge pull request #357

2022-09-30
-	nfdump-1.7.0.1 - fix build issues
-	Add docker file for alpine Linux
-	Update docker file for ubuntu
-	Fix build issues on various Linuxes

2022-09-28
-	nfdump-1.7.0 - unicorn released