@@ -211,6 +211,9 @@ static int setup_pcap_file(packetParam_t *param, char *pcap_file, char *filter, 
         case DLT_IEEE802_11:
             linkoffset = 22;
             break;
+        case DLT_NFLOG:
+            linkoffset = 0;
+            break;
         default:
             LogError("Unsupported data link type %i", linktype);
             return -1;
