@@ -60,6 +60,10 @@
 #define DLT_LINUX_SLL 113
 #endif
 
+#ifndef DLT_NFLOG
+#define DLT_NFLOG 239
+#endif
+
 #ifndef ETHERTYPE_TRANSETHER
 #define ETHERTYPE_TRANSETHER 0x6558
 #endif
